add images to the page

--- a/trips.html
+++ b/trips.html
@@ -13,12 +13,12 @@
     <!-- Contact Section -->
     <div class="contact-section">
         <div class="contact-info">
-            <span>Phone: +254 722 245676</span>
+            <span>Conact us for more information via mobile number: +254 722 245676</span>
         </div>
         <div class="social-icons">
           <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
-          <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/X.ico" alt="Twitter"></a>
-          <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.ico" alt="Instagram"></a>
+          <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/X.png" alt="Twitter"></a>
+          <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
         </div>
     </div>
 
