--- a/corporatepackages.html
+++ b/corporatepackages.html
@@ -13,12 +13,12 @@
     <!-- Contact Section -->
     <div class="contact-section">
         <div class="contact-info">
-            <span>Conact us for more information via mobile number: +254 722 245676</span>
+            <span>Contact us for more information via mobile number: +254 722 245676</span>
         </div>
         <div class="social-icons">
-          <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
-          <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/X.png" alt="Twitter"></a>
-          <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
+            <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/X.png" alt="Twitter"></a>
+            <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
         </div>
     </div>
 
@@ -30,8 +30,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="trips.html">Trips</a></li>
                 <li><a href="destinations.html">Destinations</a></li>
+                <li><a href="trips.html">Trips</a></li>
                 <li><a href="corporatepackages.html">Corporate Packages</a></li>
                 <li><a href="accomodations.html">Accommodations</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -39,6 +39,5 @@
             </ul>
         </nav>
     </header>
-
   </body>
 </html>
