--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Bibiki Travel</title>
-  </head>
-  <body>
+</head>
+<body>
     <!-- Contact Section -->
     <div class="contact-section">
         <div class="contact-info">
@@ -30,8 +30,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="destinations.html">Destinations</a></li>
                 <li><a href="trips.html">Trips</a></li>
+                <li><a href="destinations.html">Destinations</a></li>
                 <li><a href="corporatepackages.html">Corporate Packages</a></li>
                 <li><a href="accomodations.html">Accommodations</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -39,5 +39,45 @@
             </ul>
         </nav>
     </header>
-  </body>
+
+    <!-- Gallery Section -->
+    <div class="gallery">
+        <div class="gallery-grid">
+            <div class="gallery-item"><img src="assets/images/gallery1.jpg" alt="Gallery Image 1"></div>
+            <div class="gallery-item"><img src="assets/images/gallery2.jpg" alt="Gallery Image 2"></div>
+            <div class="gallery-item"><img src="assets/images/gallery3.jpg" alt="Gallery Image 3"></div>
+            <div class="gallery-item"><img src="assets/images/gallery4.jpg" alt="Gallery Image 4"></div>
+            <div class="gallery-item"><img src="assets/images/gallery5.jpg" alt="Gallery Image 5"></div>
+            <div class="gallery-item"><img src="assets/images/gallery6.jpg" alt="Gallery Image 6"></div>
+            <div class="gallery-item"><img src="assets/images/gallery7.jpg" alt="Gallery Image 7"></div>
+            <div class="gallery-item"><img src="assets/images/gallery8.jpg" alt="Gallery Image 8"></div>
+            <div class="gallery-item"><img src="assets/images/gallery9.jpeg" alt="Gallery Image 9"></div>
+            <div class="gallery-item"><img src="assets/images/gallery10.jpg" alt="Gallery Image 10"></div>
+            <div class="gallery-item"><img src="assets/images/gallery11.jpg" alt="Gallery Image 11"></div>
+            <div class="gallery-item"><img src="assets/images/gallery12.jpg" alt="Gallery Image 12"></div>
+            <div class="gallery-item"><img src="assets/images/gallery13.jpg" alt="Gallery Image 13"></div>
+            <div class="gallery-item"><img src="assets/images/gallery14.jpg" alt="Gallery Image 14"></div>
+            <div class="gallery-item"><img src="assets/images/gallery15.jpeg" alt="Gallery Image 15"></div>
+            <div class="gallery-item"><img src="assets/images/gallery16.jpg" alt="Gallery Image 16"></div>
+            <div class="gallery-item"><img src="assets/images/gallery17.jpg" alt="Gallery Image 17"></div>
+            <div class="gallery-item"><img src="assets/images/gallery18.jpg" alt="Gallery Image 18"></div>
+            <div class="gallery-item"><img src="assets/images/gallery19.jpeg" alt="Gallery Image 19"></div>
+            <div class="gallery-item"><img src="assets/images/gallery20.jpg" alt="Gallery Image 20"></div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="contact-info">
+                <span>Contact us for more information via mobile number: +254 722 245676</span>
+            </div>
+            <div class="social-icons">
+                <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/X.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
+            </div>
+        </div>
+    </footer>
+</body>
 </html>
