--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <link rel="icon" href="assets/icons/BIBIKILOGOsilver.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Bibiki Travel</title>
+    <title>Bibiki Travel Gallery</title>
 </head>
 <body>
     <!-- Contact Section -->
@@ -41,29 +41,29 @@
     </header>
 
     <!-- Gallery Section -->
-    <div class="gallery">
+    <div class="gallery-section">
+        <h2>Gallery</h2>
         <div class="gallery-grid">
-            <div class="gallery-item"><img src="assets/images/gallery1.jpg" alt="Gallery Image 1"></div>
-            <div class="gallery-item"><img src="assets/images/gallery2.jpg" alt="Gallery Image 2"></div>
-            <div class="gallery-item"><img src="assets/images/gallery3.jpg" alt="Gallery Image 3"></div>
-            <div class="gallery-item"><img src="assets/images/gallery4.jpg" alt="Gallery Image 4"></div>
-            <div class="gallery-item"><img src="assets/images/gallery5.jpg" alt="Gallery Image 5"></div>
-            <div class="gallery-item"><img src="assets/images/gallery6.jpg" alt="Gallery Image 6"></div>
-            <div class="gallery-item"><img src="assets/images/gallery7.jpg" alt="Gallery Image 7"></div>
-            <div class="gallery-item"><img src="assets/images/gallery8.jpg" alt="Gallery Image 8"></div>
-            <div class="gallery-item"><img src="assets/images/gallery9.jpeg" alt="Gallery Image 9"></div>
-            <div class="gallery-item"><img src="assets/images/gallery10.jpg" alt="Gallery Image 10"></div>
-            <div class="gallery-item"><img src="assets/images/gallery11.jpg" alt="Gallery Image 11"></div>
-            <div class="gallery-item"><img src="assets/images/gallery12.jpg" alt="Gallery Image 12"></div>
-            <div class="gallery-item"><img src="assets/images/gallery13.jpg" alt="Gallery Image 13"></div>
-            <div class="gallery-item"><img src="assets/images/gallery14.jpg" alt="Gallery Image 14"></div>
-            <div class="gallery-item"><img src="assets/images/gallery15.jpeg" alt="Gallery Image 15"></div>
-            <div class="gallery-item"><img src="assets/images/gallery16.jpg" alt="Gallery Image 16"></div>
-            <div class="gallery-item"><img src="assets/images/gallery17.jpg" alt="Gallery Image 17"></div>
-            <div class="gallery-item"><img src="assets/images/gallery18.jpg" alt="Gallery Image 18"></div>
-            <div class="gallery-item"><img src="assets/images/gallery19.jpeg" alt="Gallery Image 19"></div>
-            <div class="gallery-item"><img src="assets/images/gallery20.jpg" alt="Gallery Image 20"></div>
+            <div class="gallery-item">
+                <img src="assets/images/gallery1.jpg" alt="Gallery Image 1" onclick="openModal(this)">
+            </div>
+            <div class="gallery-item">
+                <img src="assets/images/gallery2.jpg" alt="Gallery Image 2" onclick="openModal(this)">
+            </div>
+            <div class="gallery-item">
+                <img src="assets/images/gallery3.jpg" alt="Gallery Image 3" onclick="openModal(this)">
+            </div>
+            <div class="gallery-item">
+                <img src="assets/images/gallery4.jpg" alt="Gallery Image 4" onclick="openModal(this)">
+            </div>
         </div>
+    </div>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img class="modal-content" id="expandedImg">
+        <div id="caption"></div>
     </div>
 
     <!-- Footer -->
@@ -79,5 +79,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="scripts/gallery.js"></script>
 </body>
 </html>
