--- a/trips.html
+++ b/trips.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Bibiki Travel</title>
-  </head>
-  <body>
+</head>
+<body>
     <!-- Contact Section -->
     <div class="contact-section">
         <div class="contact-info">
@@ -30,8 +30,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="destinations.html">Destinations</a></li>
                 <li><a href="trips.html">Trips</a></li>
+                <li><a href="destinations.html">Destinations</a></li>
                 <li><a href="corporatepackages.html">Corporate Packages</a></li>
                 <li><a href="accomodations.html">Accommodations</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -41,37 +41,44 @@
     </header>
 
     <!-- Trips Section -->
-    <div class="trips">
-        <div class="trip">
-            <img src="assets/images/OLDONYOLESATIMA.jpg" alt="Trip 1">
-            <h2>OLDONYO LESATIMA</h2>
-            <p class="slots">Slots Available: 10</p>
-            <button>Book Now</button>
-        </div>
-        <div class="trip">
-            <img src="assets/images/BIBIKITOUR.jpg" alt="Trip 2">
-            <h2>LAKE VICTORIA EXCURSSION</h2>
-            <p class="slots">Slots Available: 8</p>
-            <button>Book Now</button>
-        </div>
-        <div class="trip">
-            <img src="assets/images/bibiki hells gate & geothermal spa flyer.jpg" alt="Trip 3">
-            <h2>HELLS GATE</h2>
-            <p class="slots">Slots Available: 12</p>
-            <button>Book Now</button>
-        </div>
-        <div class="trip">
-            <img src="assets/images/trip4.jpg" alt="Trip 4">
-            <h2>TRIP NAME 4</h2>
-            <p class="slots">Slots Available: 5</p>
-            <button>Book Now</button>
-        </div>
-        <div class="trip">
-            <img src="assets/images/trip5.jpg" alt="Trip 5">
-            <h2>TRIP NAME 5</h2>
-            <p class="slots">Slots Available: 7</p>
-            <button>Book Now</button>
+    <div class="trips-section">
+        <h2>Our Trips</h2>
+        <div class="trips-grid">
+            <div class="trip-item" id="trip1">
+                <img src="assets/images/OLDONYOLESATIMA.jpg" alt="Trip 1">
+                <h3>OLDONYO LESATIMA</h3>
+                <p class="slots">Slots Available: 10</p>
+                <a href="#">Book Now</a>
+            </div>
+            <div class="trip-item" id="trip2">
+                <img src="assets/images/BIBIKITOUR.jpg" alt="Trip 2">
+                <h3>LAKE VICTORIA EXCURSION</h3>
+                <p class="slots">Slots Available: 8</p>
+                <a href="#">Book Now</a>
+            </div>
+            <div class="trip-item" id="trip3">
+                <img src="assets/images/bibiki hells gate & geothermal spa flyer.jpg" alt="Trip 3">
+                <h3>HELL'S GATE & GEOTHERMAL SPA</h3>
+                <p class="slots">Slots Available: 5</p>
+                <a href="#">Book Now</a>
+            </div>
         </div>
     </div>
-  </body>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="contact-info">
+                <span>Contact us for more information via mobile number: +254 722 245676</span>
+            </div>
+            <div class="social-icons">
+                <a href="https://www.facebook.com" target="_blank"><img src="assets/icons/facebook.png" alt="Facebook"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="assets/icons/X.png" alt="Twitter"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="assets/icons/instagram.png" alt="Instagram"></a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="scripts/trips.js"></script>
+</body>
 </html>
